eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IBB_Product__c.object
<CustomObject>
    <fields>
        <fullName>Ability_to_add_ongoing_deposits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ability to add ongoing deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ability_to_setup_DDs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ability to setup DDs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ability_to_setup_SOs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ability to setup SOs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>60 Day Notice Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accumulated Depreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bullet Pay. Cons. Fin-Deferred Inco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bullet Pay. Consu-Finance Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bullet Payment Consumer Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Charity Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Current Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Finance - Sec Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Finance - Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Finance Unsec - Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Finance - Unsecured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Term Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car FFinance - Ijara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cashiers Chq Outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial Property Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Property - Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity Murabaha Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity Murabaha Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent Contra Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contra Contingent Post Dated Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contra - Delivery Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contra Finance Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contra - IBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contra - Local Purchase Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use with the coding for the product recommendation field</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_payment_charges__c</fullName>
        <label>Additional payment charges</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repayment of IBB legal contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repayment of IBB valuation contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repayment of customer legal contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repayment of cashback</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Administration_fee_value__c</fullName>
        <description>The administration fee payable on a purchase plan product where the fee is a fixed fee expressed in £&apos;s.</description>
        <label>Administration fee £</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Administration_fee_value_percentage__c</fullName>
        <description>The administration fee payable on a purchase plan product where the fee is expressed as a %age of the finance amount.</description>
        <label>Administration fee %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agency_fee_Percentage__c</fullName>
        <label>Agency fee - Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agency_fees_Value__c</fullName>
        <label>Agency fees - Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allow_card_payment_CAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow card payment CAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_of_application_fee_paid__c</fullName>
        <description>The amount of administration fee that is paid on application expressed as a fixed amount in £&apos;s.</description>
        <label>Administration fee paid on application £</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_for__c</fullName>
        <label>Available for</label>
        <picklist>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional capital</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bank_legal_cost__c</fullName>
        <label>Bank legal cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <description>The underlying benchmark used to illsutrate the rental rate payable.</description>
        <label>Benchmark</label>
        <picklist>
            <picklistValues>
                <fullName>BBR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>LIBOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benchmark_rate__c</fullName>
        <description>The percentage rate of the benchmark at the time that the product went live</description>
        <inlineHelpText>Where the rate is variable rate, this is the value of the underlying benchmark rate at the time of launch.</inlineHelpText>
        <label>Rental Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bonus_condition_rate_percentage__c</fullName>
        <label>Bonus condition rate percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bonus_period_duration__c</fullName>
        <label>Bonus period duration</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonus_period_end_date__c</fullName>
        <label>Bonus period end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cap_bench_percentage__c</fullName>
        <inlineHelpText>The maximum amount that the margin can be increased by throughout the term of the product.</inlineHelpText>
        <label>Margin Cap %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cap_revert_percentage__c</fullName>
        <label>Revert Rate Margin Cap %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cash_back_amount__c</fullName>
        <label>Cash back amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_back_percentage__c</fullName>
        <label>Cash back percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cash_card_Available_to_have__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash card (Available to have)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_of_Product__c</fullName>
        <label>Category of Product</label>
        <picklist>
            <picklistValues>
                <fullName>Current Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Purchase Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Purchase Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Purchase Plan Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy to Let Purchase Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Free Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy To Let Purchase Plan Sco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cheque_book_Available_to_have__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque book (Available to have)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collar_bench_percentage__c</fullName>
        <inlineHelpText>The minimum total rental rate that can apply to the finance product regardless of the benchmark and margin that applies</inlineHelpText>
        <label>Collar %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collar_rate__c</fullName>
        <description>Used to hold information about asset products</description>
        <label>Collar rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collar_revert_percentage__c</fullName>
        <label>Collar %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compounded_profit_rate__c</fullName>
        <label>Compounded profit rate for letter</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CongaISATransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen ISA Transfer</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (CongaSetting)</relationshipLabel>
        <relationshipName>IBB_Products5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CongaOfferLetterEquityRelease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CongaOfferLetterEquityRelease</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CongaOfferLetterRefinance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGenOfferLetterRefinance</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (CongaOfferLetterRefinance)</relationshipLabel>
        <relationshipName>IBB_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CongaSettings__c</fullName>
        <label>DocuGenSettings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CongaWelcomeLetter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGenWelcomeLetter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (CongaWelcomeLetter)</relationshipLabel>
        <relationshipName>IBB_Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_FIS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen FIS</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga FIS)</relationshipLabel>
        <relationshipName>IBB_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Failed_EKYC_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use in generating failed EKYC liability letters</description>
        <label>DocuGen Failed EKYC Letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Failed EKYC Letter)</relationshipLabel>
        <relationshipName>IBB_ProductsTWwx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Liability_App_1_CAA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Liability App 1 CAA</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Liability App 1 CAA)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Liability_App_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Liabilities application form generation</description>
        <label>Conga Liability App 1</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_ProductsTWx7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Liability_App_2_CAA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Liability App 2 CAA</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Liability App 2 CAA)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Liability_App_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Liabilities application  form generation</description>
        <label>Conga Liability App 2</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_ProductsTWxH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Liability_App_3_CAA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Liability App 3 CAA</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Liability App 3 CAA)</relationshipLabel>
        <relationshipName>Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Liability_App_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Liabilities application form generation</description>
        <label>Conga Liability App 3</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_ProductsTWxR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Offer_Letter_Switch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Offer Letter Switch</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Offer Letter Switch)</relationshipLabel>
        <relationshipName>IBB_Products6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Offer_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Offer Letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Offer Letter)</relationshipLabel>
        <relationshipName>IBB_Products4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Signature_Required_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Signature Required Letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Signature Required Letter)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Welcome_Letter_Switch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Welcome Letter Switch</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Conga Welcome Letter Switch)</relationshipLabel>
        <relationshipName>IBB_Products7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Pound Sterling</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States Dollar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Channel__c</fullName>
        <label>Customer Channel</label>
        <picklist>
            <picklistValues>
                <fullName>New customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current account holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building insurance customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_legal_cost__c</fullName>
        <label>Customer legal cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_legal_costs_paid_by__c</fullName>
        <label>Customer legal costs paid by</label>
        <picklist>
            <picklistValues>
                <fullName>IBB</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debit_card_Available_to_have__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit card (Available to have)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_of_products_portability__c</fullName>
        <label>Details of products portability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discounted_fixed__c</fullName>
        <inlineHelpText>For use with the MMR product recommendation letter</inlineHelpText>
        <label>Discounted/fixed</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_product_expiry_date__c</fullName>
        <inlineHelpText>If this product is not a discounted product, please leave blank.</inlineHelpText>
        <label>Discounted product expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocuGenSwitchFIS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGenSwitchFIS</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (DocuGenSwitchFIS)</relationshipLabel>
        <relationshipName>Products4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBS_Deal_Account_Type__c</fullName>
        <externalId>true</externalId>
        <label>EBS Deal/Account Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Deal_Period_Code__c</fullName>
        <label>EBS Deal Period Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Settlement_Allowed__c</fullName>
        <label>Early Settlement Allowed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_payment_charge_applies_until2__c</fullName>
        <label>Period 2 EPC applies until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_payment_charge_applies_until__c</fullName>
        <label>Period 1 EPC applies until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_repayment_charge_1__c</fullName>
        <label>Early payment charge (Period 1)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Early_repayment_charge_2__c</fullName>
        <label>Early repayment charge (Period 2)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Early_settlement_details__c</fullName>
        <label>Early settlement details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EventDirector</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipName>IBB_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FIS_Conga_DocumentId__c</fullName>
        <label>FIS Conga DocumentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Term_Months__c</fullName>
        <label>FTD Term (Months)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Featured_product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feature products checkbox will indicate the products that are to be used with merged fields on the website to display the products (future development)</description>
        <label>Featured_product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Assisted__c</fullName>
        <formula>IF(OR(ISPICKVAL(Valuation_Type__c, &quot;Waivered&quot;), 
ISPICKVAL(Valuation_Type__c, &quot;Refunded&quot;), 
ISPICKVAL(Valuation_Type__c, &quot;Discounted&quot;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Assisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fees_assistance_percentage__c</fullName>
        <label>Fees assistance percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fees_assistance_value__c</fullName>
        <label>Fees assistance value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_or_Discounted__c</fullName>
        <label>Fixed or Discounted</label>
        <picklist>
            <picklistValues>
                <fullName>fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>discounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_product_expiry__c</fullName>
        <description>For use with new offer letters</description>
        <inlineHelpText>If this product is not a fixed product, please leave blank</inlineHelpText>
        <label>Fixed product expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_product_rate_duration__c</fullName>
        <label>Fixed product rate duration (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_product_rate_until__c</fullName>
        <label>Product rate until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_rate__c</fullName>
        <label>Fixed rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Frequency_of_rent_review__c</fullName>
        <label>Frequency of rent review</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Six monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Further_advances_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Further advances allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Further_advances_details__c</fullName>
        <label>Further advances details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IBBHomeFinanceRentalRateMargin__c</fullName>
        <label>IBBHomeFinanceRentalRateMargin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IBB_Finance_Rental_Rate_Margin__c</fullName>
        <inlineHelpText>Only applies for a discounted variable product.</inlineHelpText>
        <label>Discount from IBB Finance RR Margin</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IBB_Legal_costs_paid_by__c</fullName>
        <label>IBB Legal costs paid by</label>
        <picklist>
            <picklistValues>
                <fullName>IBB in full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer in full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBB and Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBB_Product_Set__c</fullName>
        <label>IBB Product Set</label>
        <referenceTo>IBB_Product_Set__c</referenceTo>
        <relationshipName>IBB_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IDD_Document__c</fullName>
        <label>IDD Document</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_payment_types_available__c</fullName>
        <label>Inbound payment types available</label>
        <picklist>
            <picklistValues>
                <fullName>BACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Income_per_pound__c</fullName>
        <label>Income per pound</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interested_in_value__c</fullName>
        <label>Interested in value</label>
        <picklist>
            <picklistValues>
                <fullName>Current account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL Purchase Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_product_portable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is product portable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_Welcome_Letter_Post__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with the generation of liability letters for post/branch</description>
        <label>Liability Welcome Letter Post</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_Products9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Liability_Welcome_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with the generation of liabilities online welcome letters</description>
        <label>Liability Welcome Letter Online</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Liability Welcome Letter)</relationshipLabel>
        <relationshipName>IBB_Products8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limited_Company_App_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with NPAA build</description>
        <label>Limited Company App Form</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_ProductsRIwx</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>